--- a/src/layouts/base.astro
+++ b/src/layouts/base.astro
@@ -26,14 +26,14 @@ seo.openGraph.optional = {
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset='UTF-8' />
+    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
     <SEO {...seo} />
   </head>
   <body>
-    <slot />
+    <slot></slot>
   </body>
 </html>
