--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,10 @@ import { linkPrefix, indexNode } from '../../site.config';
 
 <html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content={`0; url = ${linkPrefix}${indexNode}`} />
+    <meta charset='UTF-8' />
+    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <meta http-equiv='refresh' content={`0; url = ${linkPrefix}${indexNode}`} />
     <title>{`Redirecting to ${linkPrefix}${indexNode}`}</title>
   </head>
   <body>
